syntax = "proto3";

package book;

option go_package = "../pb";

message Book {
  int64 id = 1;
  string title = 2;
  string author = 3;
}

message GetAllBooksRequest {}

message GetAllBooksResponse {
  repeated Book books = 1;
}

message AddBookRequest {
  string title = 1;
  string author = 2;
}

message AddBookResponse {
  Book book = 1;
}

service BookService {
  rpc GetAllBooks(GetAllBooksRequest) returns (GetAllBooksResponse);
  rpc AddBook(AddBookRequest) returns (AddBookResponse);
}
